hphp/hack/test/typecheck/tconst/constructor_error.php.like_types.exp
File "constructor_error.php", line 14, characters 26-27:
Invalid argument (Typing[4110])
File "constructor_error.php", line 8, characters 39-45:
Expected ~this::T because it is an unenforceable type
File "constructor_error.php", line 14, characters 26-27:
But got string
